[tool.poetry]
name = "timepkg"
version = "0.1.0"
description = "Timing Utilities"
authors = ["dav ost <private>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version = "0.6", markers = "python_version < '3.7'"}
typing-extensions = {version = "4.1.1", markers = "python_version < '3.10'"}

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
