[tool.poetry]
name = "timepkg"
version = "0.3.0"
description = "Timing Utilities"
authors = ["dav ost <davidost2003@gmail.com>"]
license = "LICENSE"
readme = "README.md"
repository = "https://github.com/DavOstx7/timepkg.git"


[tool.poetry.dependencies]
python = "^3.6"
dataclasses = {version = "0.6", markers = "python_version < '3.7'"}
typing-extensions = {version = "4.1.1", markers = "python_version < '3.10'"}


[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
